# tree-sitter-flint

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: index.js
bindings/python/tree_sitter_flint/: __init__.py
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c  scanner.c
