[package]
name = "tree-sitter-flint"
description = "Tree Sitter grammar for the Flint programming language"
version = "0.0.1"
authors = ["Julius Grünberg <ghastcrafthd@troense.de>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "flint"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/flint-lang/tree-sitter-flint"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
