[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-flint"
description = "Tree Sitter grammar for the Flint programming language"
version = "0.0.1"
keywords = ["incremental", "parsing", "tree-sitter", "flint"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Julius Grünberg", email = "ghastcrafthd@troense.de" }]
requires-python = ">=3.10"
license.text = "Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/flint-lang/tree-sitter-flint"
Funding = ""

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
